# RustGPT

./: Cargo.toml  PARAMETER_REDUCTION_PATCH.md  README.md  SPRINT_RETROSPECTIVE.md  build_out_full.txt  build_output.txt  build_run_after_fix.txt  build_run_output.txt  build_run_output_backtrace.txt  build_run_output_backtrace_full.txt  build_test_output.txt  debug_tanh_issue.rs  model.md  old_poly.rs  process.py  test_ab_coefficients.rs  test_dramatic_learning.rs  test_dynamic_tanh_comparison.rs  test_fix_validation.rs  test_fix_validation_simple.rs  test_gradient_impact.rs  test_gradient_impact_simple.rs  test_learning_bug_demo.rs  test_none_variant.rs  test_parameter_learning_validation.rs  test_poly_attention_none_variant.rs  test_richards_activation.rs  test_richards_attention.rs  test_sigmoid_gompertz_validation.rs  test_swiglu_richards.rs  trm_adaptive_100epoch_fixed_log.txt  trm_adaptive_100epoch_v2_log.txt  trm_adaptive_100epoch_v3_log.txt  trm_adaptive_confidence_100epoch_log.txt  trm_adaptive_improved_100epoch_log.txt  trm_adaptive_improved_10epoch_log.txt  trm_adaptive_stronger_halt_log.txt  trm_fixed_depth5_baseline_log.txt
data/: chat_training_data.json  pretraining_data.json
docs/: ADAPTIVE_HEADS_EXECUTIVE_SUMMARY.md  ADAPTIVE_HEADS_IMPLEMENTATION_ROADMAP.md  ADAPTIVE_HEADS_RESEARCH_AND_DESIGN.md  ADAPTIVE_MOE_RESEARCH.md  ADAPTIVE_RECURSIVE_DEPTH_DESIGN.md  ADAPTIVE_RECURSIVE_DEPTH_RESULTS.md  ADAPTIVE_WINDOW_IMPLEMENTATION.md  ADR.md  ADR_Adaptive_Gradient_Clipping.md  ADR_model_persistence.md  ADR_verbose.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_COMPARISON_OUTPUT.md  BEAM_SEARCH_IMPLEMENTATION.md  BIAS_REMOVAL.md  COMPLETE_GRADIENT_FLOW.md  COP_INTEGRATION.md  FULLY_ADAPTIVE_MOH_BUG_FIXES.md  FULLY_ADAPTIVE_MOH_DESIGN.md  FULLY_ADAPTIVE_MOH_DIAGNOSIS.md  GQA_IMPLEMENTATION.md  GRADIENT_STABILITY_ENHANCEMENTS.md  HRM_IMPLEMENTATION_PLAN.md  HRM_RESEARCH_SUMMARY.md  HYPERMIXER_ARCHITECTURE.md  HYPERMIXER_FINAL_AUDIT_SUMMARY.md  HYPERMIXER_INITIALIZATION_AND_GRADIENTS.md  HYPERMIXER_METHODS_AUDIT.md  HYPERNETWORK_SHARING_ANALYSIS.md  LEARNED_TEMPERATURE_INVESTIGATION.md  MOE_IMPLEMENTATION_PLAN.md  MOE_IMPLEMENTATION_STATUS.md  MOH_OPTIMIZATION_PLAN.md  (+31 more)
(+66 files in other folders)
