[package]
name = "llm"
version = "0.1.0"
# 2024 = latest edition
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
csv = "1.3"
ndarray = { version = "0.16.1", features = ["serde"] }
rand = "0.9.2"
rand_distr = "0.5.0"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[dev-dependencies]
proptest = "1.5"
tempfile = "3.0"

[lib]
name = "llm"
path = "src/lib.rs"

[[bin]]
name = "llm"
path = "src/main.rs"
